src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Government Fleet</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Tender</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won - Partial</fullName>
        </values>
        <values>
            <fullName>Discontinued</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Tender Preparation</fullName>
        </values>
        <values>
            <fullName>Tender Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Large Fleet</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won - Partial</fullName>
        </values>
        <values>
            <fullName>Discontinued</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
        <values>
            <fullName>Promote</fullName>
        </values>
        <values>
            <fullName>Quote Preparation</fullName>
        </values>
        <values>
            <fullName>Quote Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NFP</fullName>
        <description>Not for Profit</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won - Partial</fullName>
        </values>
        <values>
            <fullName>Discontinued</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
        <values>
            <fullName>Promote</fullName>
        </values>
        <values>
            <fullName>Quote Preparation</fullName>
        </values>
        <values>
            <fullName>Quote Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Rental</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won - Partial</fullName>
        </values>
        <values>
            <fullName>Discontinued</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Offer Submitted</fullName>
        </values>
        <values>
            <fullName>Offer in Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Promote</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <formula>Account.Primary_Dealer__r.Id</formula>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>Account.Primary_Dealer__r.Name</formula>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_reports__c</fullName>
        <formula>TotalOpportunityQuantity</formula>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>If Opportunity is Closed - Lost or Discontinued, an reason must be entered.</description>
        <inlineHelpText>Enter a reason for the status of closed - Lost or Discontinued</inlineHelpText>
        <label>Close Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost - to a competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - unable to meet supply chain requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - special requirements of customer not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued - incorrect entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued - duplicate entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued - cold opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued - other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Assistance_Vehicle__c</fullName>
        <formula>Special_Assistance__r.Vehicle__r.Name</formula>
        <label>Special Assistance Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Assistance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Searches for Special Assistance related to this Organisation.</inlineHelpText>
        <label>Special Assistance</label>
        <referenceTo>Special_Assistance__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Quantity_reports__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Government_Fleet</fullName>
        <active>true</active>
        <businessProcess>Government Fleet</businessProcess>
        <label>Government Fleet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Large_Fleet</fullName>
        <active>true</active>
        <businessProcess>Large Fleet</businessProcess>
        <label>Large Fleet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Not_for_Profit</fullName>
        <active>true</active>
        <businessProcess>NFP</businessProcess>
        <label>Not for Profit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental</fullName>
        <active>true</active>
        <businessProcess>Rental</businessProcess>
        <label>Rental</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SA_from_same_account</fullName>
        <active>true</active>
        <errorConditionFormula>(AccountId &lt;&gt; Special_Assistance__r.Organisation__r.Account_ID__c) &amp;&amp;  NOT(ISBLANK( Special_Assistance__c))</errorConditionFormula>
        <errorMessage>Special Assistance is for a different organisation</errorMessage>
    </validationRules>
</CustomObject>